--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@mui/styled-engine-sc": "^5.11.11",
+    "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "faker": "^6.6.6",
     "lightweight-charts": "^4.0.0",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "sass": "^1.59.3",
     "styled-components": "^5.3.9"
